--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Constraining</string>
+    <string name="go">GO!</string>
+    <string name="pw">password</string>
+    <string name="user">username</string>
 </resources>
